:adhesive_bandage: add z-index to fix scroll bar cant be used if footer is in the way

--- a/src/layout/Footer/style.css
+++ b/src/layout/Footer/style.css
@@ -4,7 +4,8 @@
     bottom: 0;
     left: 0;
     padding: 10px;
-    color: grey
+    color: grey;
+    z-index: -1;
 }
 
 @media only screen and (max-width: 800px) {
